tests/error/comptime/check_slice_construction17.bz
function test()
{
	(consteval {
		let p: ?*int32 = null;
		let q: ?*int32 = null;
		{
			let i = 0;
			p = &i;
			q = &i + 1;
		}
		__builtin_slice_from_ptrs(p, q);
	});
}
